# engineering-intelligence-hub

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: config.yaml
data/sample/code/: auth.py
data/sample/diagrams/: auth-architecture.png.caption.txt
data/sample/docs/: auth-service.md  deployment.md
data/sample/incidents/: INC-2025-014.md
eval/: goldset.json
scripts/: caption_diagrams.py  ingest.py  make_sample_diagram.py  query.py
src/eih/: __init__.py  api.py  config.py  embeddings.py  eval.py  generation.py  pipeline.py  retrieval.py  schema.py  store.py  ui.py
src/eih/ingestion/: chunkers.py  loaders.py  vision.py
src/engineering_intelligence_hub.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_chunkers.py  test_retrieval.py
