[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-intelligence-hub"
version = "0.1.0"
description = "Developer-focused hybrid RAG over docs, code, incidents and diagrams."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
